fix alignment of each note

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  //   sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -37,14 +38,13 @@ code {
   }
 }
 
-.chord-movement {
-  font-family: Consolas, 'Courier New', monospace;
-  font-weight: 500;
-
-  .voice-movement {
-    display: inline-block;
-    width: 10px;
-  }
+.voice-movement {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  // font-family: Verdana, Geneva, Tahoma, sans-serif;
+  // font-weight: 100;
+  font-size: 21px;
+  display: inline-block;
+  width: 10px;
 }
 
 .motion-option {
@@ -55,6 +55,10 @@ code {
 
 .option-container {
   position: absolute;
+
+  .motion-option {
+    transform: translate(-50%, -50%);
+  }
 }
 
 .circle-of-fourths {
@@ -62,5 +66,5 @@ code {
   $motion-option-size: 100px;
   width: 2*$radius + $motion-option-size / 2;
   height: 2*$radius + $motion-option-size / 2;
-  margin: auto;
+  margin: 50px auto;
 }
